commit bean config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ security.oauth2.client.scope=password
 security.oauth2.client.client-id=getnet
 security.oauth2.client.client-secret=123
 
+#Bean Config
+spring.main.allow-bean-definition-overriding=true
+
